--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "express": "^4.18.2",
     "framer-motion": "^10.8.5",
+    "mysql2": "^3.6.5",
     "next": "13.2.4",
     "next-sanity": "^4.1.5",
     "pretty-rating-react": "^2.2.0",
